# kivystart

./: AUTHORS.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
docs/: CODEOWNERS
kivystart/: __main__.py  ansi.py  buildozer.py  commands.py  renderer.py  storage.py
kivystart/app_template/: __init__.py
kivystart/app_template/basic/: __init__.py
kivystart/app_template/basic/steps/: __init__.py  create_assets.py  create_codeowners.py  create_components.py  create_controllers.py  create_kv_files.py  create_models_and_utils.py  final_touches.py
kivystart/licenses/: __init__.py
kivystart/templates/basic/kivy/: README.md  main.py.kivytemplate
kivystart/templates/basic/kivy/components/: main_container.py  screen_manager.py  toolbar.py
kivystart/templates/basic/kivy/components/screens/: main_screen.py
kivystart/templates/basic/kivy/kv_files/: main_container.kv.kivytemplate  main_toolbar.kv.kivytemplate  root_container.kv.kivytemplate
kivystart/templates/basic/kivymd/: LICENSE.kivytemplate  main.py.kivytemplate  requirements.txt.kivytemplate  theme.py.kivytemplate
kivystart/templates/basic/kivymd/components/: main_container.py  toolbar.py
kivystart/templates/basic/kivymd/components/screens/: main_screen.py
kivystart/templates/basic/kivymd/controllers/: app_controller.py
kivystart/templates/basic/kivymd/docs/: CODEOWNERS.kivytemplate
kivystart/templates/basic/kivymd/kv_files/: main_container.kv.kivytemplate  main_toolbar.kv.kivytemplate  root_container.kv.kivytemplate
kivystart/templates/basic/kivymd/utils/: __init__.py
kivystart/utils/: base.py
